--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,1 +1,15 @@
 /* TODO Add site wide styles */
+@font-face {
+    font-family: "Montserrat";
+    src: url("./Assets/Fonts/Montserrat-Regular.ttf");
+}
+
+@font-face {
+    font-family: "Montserrat";
+    src: url("./Assets/Fonts/Montserrat-Bold.ttf");
+    font-weight: bold;
+}
+
+* {
+    font-family: "Montserrat";
+  }
