--- a/frontend/src/components/ReviewAggText/ReviewAggText.css
+++ b/frontend/src/components/ReviewAggText/ReviewAggText.css
@@ -2,7 +2,9 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    width: 145px;
+    max-width: 145px;
+    width: fit-content;
+    column-gap: 8px;
 }
 .review-agg-text-review-count{
     text-decoration: underline;
