updated nav with new link to form

--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -31,3 +31,9 @@
     cursor: pointer;
     box-shadow: 1px 3px 5px #d3d3d3 ;
 }
+
+.nav-list-right{
+    display: flex;
+    align-items: center;
+    column-gap: 20px;
+}
