--- a/frontend/src/components/DetailedSpotCard/DetailedSpotCard.css
+++ b/frontend/src/components/DetailedSpotCard/DetailedSpotCard.css
@@ -1,10 +1,16 @@
 /*IMAGES*/
-.detailed-spot-card{
+.detailed-spot-card, .detailed-spot-page{
     display: flex;
     flex-direction: column;
     max-width: 1000px;
     margin: 10px auto 10px;
 }
+
+.detailed-spot-card{
+    padding-bottom: 20px;
+    border-bottom: 2px rgba(223, 222, 222, 0.471) solid;
+}
+
 .detailed-spot-card-img-wrapper {
     height: 500px;
     width: 1000px;
