--- a/frontend/src/components/ReviewAggText/ReviewAggText.css
+++ b/frontend/src/components/ReviewAggText/ReviewAggText.css
@@ -6,7 +6,7 @@
     width: fit-content;
     column-gap: 8px;
 }
-.review-agg-text-review-count{
+/* .review-agg-text-review-count{
     text-decoration: underline;
     text-underline-offset: 2px
-}
+} */
