updated modal css and added front-end validations

--- a/frontend/src/components/StarRatingInput/StarRatingInput.css
+++ b/frontend/src/components/StarRatingInput/StarRatingInput.css
@@ -1,9 +1,9 @@
 .rating-input .filled {
-    color: #f9385d;
+    color: #f5b025;
 }
 
 .rating-input .empty {
-    color: #f9b8c5;
+    color: #f5d696;
 }
 
 .rating-input{
