--- a/frontend/src/components/OpenModalButton/OpenModalButton.css
+++ b/frontend/src/components/OpenModalButton/OpenModalButton.css
@@ -1,8 +1,8 @@
-.reserve-button{
+.detailed-spot-post-review-button{
     background-color: #f9385d;
     color: white;
-    padding: 5px;
     border: none;
-    border-radius: 5px;
+    padding: 5px;
+    border-radius: 10px;
     cursor: pointer;
 }
