--- a/frontend/src/components/NewSpotForm/NewSpotForm.css
+++ b/frontend/src/components/NewSpotForm/NewSpotForm.css
@@ -13,9 +13,11 @@
     color: white;
     background-color: #f34669;
     margin-top: 20px;
-    padding: 10px;
+    padding: 15px;
     width: 100px;
     align-self: center;
+    border-radius: 15px;
+    border: none;
 }
 
 /*Align Items*/
