redirected user to homepage on logout and minor styling

--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -79,3 +79,8 @@ ul.hidden{
     background-color: white;
     width: fit-content;
 }
+
+li.session-butons-li{
+    display: flex;
+    column-gap: 5px;
+}
