--- a/frontend/src/components/OpenModalButton/OpenModalButton.css
+++ b/frontend/src/components/OpenModalButton/OpenModalButton.css
@@ -1,4 +1,4 @@
-.detailed-spot-post-review-button, .detailed-spot-post-delete-button{
+.detailed-spot-post-review-button, .detailed-spot-post-delete-button, .user-login-button{
     background-color: #f9385d;
     color: white;
     border: none;
@@ -7,7 +7,11 @@
     cursor: pointer;
 }
 
-.user-spot-delete-button{
+.user-login-button, .user-signup-button{
+    border-radius: 5px;
+}
+
+.user-spot-delete-button, .user-signup-button{
     border: none;
     padding: 5px;
     border-radius: 10px;
