--- a/frontend/src/components/SignupFormModal/SignupForm.css
+++ b/frontend/src/components/SignupFormModal/SignupForm.css
@@ -1,1 +1,19 @@
-/* TODO: Style Signup Page */
+.signup-form-modal{
+    height: fit-content;
+    width: 400px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+.signup-form{
+    display: flex;
+    flex-direction: column;
+    row-gap: 5px;
+    width: 350px;
+}
+
+label{
+    display: flex;
+    flex-direction: column;
+}
