--- a/frontend/src/components/NewSpotForm/NewSpotForm.css
+++ b/frontend/src/components/NewSpotForm/NewSpotForm.css
@@ -3,6 +3,14 @@
     font-size: 32px;
 }
 
+/*Images*/
+.preview-image{
+    width: 50px;
+    height: 50px;
+    object-fit: scale-down;
+    padding: 10px;
+}
+
 /*Colors*/
 .form-error{
     color: palevioletred;
